# anki_extraction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.ipynb
backend/: .gitignore  Dockerfile  pyproject.toml  test.ipynb
backend/src/: anki.py  main.py  processing.py  prompts.py  utils.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
frontend/src/components/: Config.css  Config.js  CustomFileInput.css  CustomFileInput.js  ImageUpload.js  InputSection.css  InputSection.js  Log.css  Log.js  ManualCardReview.js  RedCardsReview.js  TextForm.js  UnifiedInput.js
src/: main.py  processing.py  utils.py
