[project]
name = "anki"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sergei Maksimov", email = "maksimov@self.team" }
]
dependencies = [
    "requests>=2.32.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "tenacity>=9.0.0",
    "openai>=1.107.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pip>=24.2",
    "ipywidgets>=8.1.5",
    "ipykernel>=6.29.5",
    "aiohttp>=3.10.8",
    "nest-asyncio>=1.6.0",
    "notebook>=7.2.2",
    "ipython>=8.29.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anki"]
